    - Add ConsoleMonitor and support to run it.
  * powernap/powernap.py:
    - Improve config loading method for Monitors.
  * sbin/powernapd: Change approach of powernapd_loop.
    - GRACE period is time between ABSENT_SECONDS and
      (ABSENT_SECONDS - GRACE_SECONDS)
    - Only send a Wall message when on GRACE Period.
    - Enable Monitors to run at all times. Specifically when in PowerSave.

  [ Dustin Kirkland ]
  * config, powernap/monitors/TCPMonitor.py, powernap/powernap.py:
    - add a TCP Monitor
  * config, powernap/monitors/LoadMonitor.py, powernap/powernap.py:
    - add a system Load Monitor
  * debian/control: bump standards version
  * debian/rules: make sure powernapd starts on install, LP: #705959

 -- Andres Rodriguez <andreserl@ubuntu.com>  Wed, 26 Jan 2011 14:16:31 -0500

powernap (2.0-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * powernap/monitors: Re-work Monitors to integrate them with PowerNap.
  * powernap/powernap.py: Minor fixes to not crash when loading monitors.
  * sbin/powernapd: Integrate Monitors approach to work with Daemon.
  * Update copyright headers for some files
  * Update manpages and add one for powernap-action.
  * Update packaging:
    - debian/control: Add python related fileds.
    - debian/rules: Add dh_pycentral related rules.
  * Add new package to contain new modules and monitors:
    - debian/control: Add package powernap-common.
    - debian/powernap-common.install: Install new files (PowerNap class and
      Monitors); Move action scripts installation to this package.
  * sbin/powernapd: Improve WoL monitor to listen in eth* interfaces.
  * config: Update and cleanup.
  * sbin/powernapd,bin/powerwake: Fix generation of WoL Magic Packet.
    Apparently, more data than required was addeed. (LP: #705943)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 22 Jan 2011 09:09:04 -0600

powernap (1.12-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]