@@ -1,9 +1,9 @@
 #    powernapd plugin - Monitors process table for presence of process
 #
-#    Copyright (C) 2009 Canonical Ltd.
+#    Copyright (C) 2011 Canonical Ltd.
 #
 #    Authors: Dustin Kirkland <kirkland@canonical.com>
-#             Andres Rodriguez <andreserl@ubuntu.com>
+#             Andres Rodriguez <andreserl@canonical.com>
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
