@@ -1,10 +1,10 @@
 #    powernapd plugin - Monitors /dev/input for user activity
 #
-#    Copyright (C) 2009 Canonical Ltd.
+#    Copyright (C) 2010, 2011 Canonical Ltd.
 #
 #    Authors: Dustin Kirkland <kirkland@canonical.com>
 #             Adam Sutton <dev@adamsutton.me.uk>
-#             Andres Rodriguez <andreserl@ubuntu.com>
+#             Andres Rodriguez <andreserl@canonical.com>
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
