@@ -3,10 +3,10 @@
 #    powernapd - monitor a system process table; if IDLE amount of time
 #               goes by with no MONITORED_PROCESSES running, run ACTION
 #
-#    Copyright (C) 2009 Canonical Ltd.
+#    Copyright (C) 2009-2011 Canonical Ltd.
 #
 #    Authors: Dustin Kirkland <kirkland@canonical.com>
-#             Andres Rodriguez <andreserl@ubuntu.com>
+#             Andres Rodriguez <andreserl@canonical.com>
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
